Add update of career path
